Added more validation cases